Fixed navbar padding on mobile

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -113,10 +113,16 @@
 
 @media (min-width: 320px) and (max-width: 767px) {
     .header_area {
-        padding: 0;
+        padding: 0px;
     }
+    header.header_area.animated.sticky.slideInDown {
+      padding-bottom: 60px;
+      margin-top: 0px;
+    }
+
+
     .menu_area .navbar-brand {
-        font-size: 48px;
+        font-size: 40px;
     }
     .header_area.sticky {
         height: 50px;
